# auxy-finance-lab

./: .gitignore  index.html
.github/workflows/: veille.yml
css/: style.css
js/: app.js
js/modules/: benchmark.js  credit.js  dashboard.js  history.js  immobilier.js  structured.js  tools.js
js/utils/: charts.js  export.js  financial.js  i18n.js  logo-data.js  storage.js
veille/: __init__.py  config.py  email_sender.py  main.py  market_data.py  news.py  pyproject.toml  rates.py  template.py
